--- a/app/src/main/res/layout/capture.xml
+++ b/app/src/main/res/layout/capture.xml
@@ -180,9 +180,10 @@
               android:background="@drawable/shutter_button"
               android:clickable="true"
               android:focusable="true"
-              android:layout_alignParentRight="true"
+              android:layout_alignParentLeft="true"
+              android:layout_alignParentStart="true"
               android:gravity="center_vertical"
-              android:layout_marginRight="8dip"
+              android:layout_marginLeft="8dip"
               android:layout_marginTop="8dip"
               android:scaleType="center"
               android:visibility="gone" /> 
